renaming EWS to ESS

--- a/archive/reults-draft.Rmd
+++ b/archive/reults-draft.Rmd
@@ -30,19 +30,19 @@ if (!file.exists("./output/r.rds")) {
 
 # Results
 
-## Value of EWS under baseline assumptions
+## Value of ESS under baseline assumptions
 
 Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). In the absence of any behavioral change, the unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, costing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
 
-If policymakers followed our base-case NPI policy, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if a baseline syndromic surveillance system is used to trigger NPIs (NPIs w/o EWS scenario). Such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
+If policymakers followed our base-case NPI policy, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "deaths_per_100k")` deaths per 100,000 population if a baseline syndromic surveillance system is used to trigger NPIs (NPIs w/o ESS scenario). Such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "C")` per person.
 
-Under baseline assumptions, the EWS provides net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the costs of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a conventional pandemic response system (NPI + 2-day EWS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier warning. A system that provides a 5-day early warning (NPIs + 5-day EWS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day EWS", variable == "deaths_per_100k")` deaths per 100,000 people.
+Under baseline assumptions, the ESS provides net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the costs of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a conventional pandemic response system (NPI + 2-day ESS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day ESS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier warning. A system that provides a 5-day early warning (NPIs + 5-day ESS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day ESS", variable == "deaths_per_100k")` deaths per 100,000 people.
 
-The use of early warning would result in earlier public health intervention, increasing the number of days of under NPIs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L1plus_days")` days for a system providing a 5-day early warning signal. That said, the number of days at the *maximum* intervention level (i.e., a lockdown) was projected to *decrease* with the early warning system, as earlier action prevented surges from reaching alarming levels that prompted blunt interventions. For example, a system that provided a 5-day early warning reduced the number of days under the maximum intervention level from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L5_days")` days. Still, the net effect of the EWS was to marginally increase NPI intervention costs, from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "CNPI")` dollars per person, assuming a 5-day early warning. Health and economic outcomes weighted, the early warning system reduced the total pandemic costs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "C")` dollars per person. The difference between the two costs is the net-monetary benefit of the system, which is estimated at `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "NMB")` dollars per person in the first year of the pandemic.
+The use of early warning would result in earlier public health intervention, increasing the number of days of under NPIs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "L1plus_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "L1plus_days")` days for a system providing a 5-day early warning signal. That said, the number of days at the *maximum* intervention level (i.e., a lockdown) was projected to *decrease* with the early warning system, as earlier action prevented surges from reaching alarming levels that prompted blunt interventions. For example, a system that provided a 5-day early warning reduced the number of days under the maximum intervention level from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "L5_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "L5_days")` days. Still, the net effect of the ESS was to marginally increase NPI intervention costs, from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "CNPI")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "CNPI")` dollars per person, assuming a 5-day early warning. Health and economic outcomes weighted, the early warning system reduced the total pandemic costs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o ESS", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "C")` dollars per person. The difference between the two costs is the net-monetary benefit of the system, which is estimated at `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day ESS", variable == "NMB")` dollars per person in the first year of the pandemic.
 
 <!--
 Points from this section for discussion:
-* **EWS provides meaningful value under base-case assumptions.** Net-monetary benefit from the surveillance system is on the order of 1,000 dollars per person over a one-year time-frame. This outweighs any available estimate of costs.
+* **ESS provides meaningful value under base-case assumptions.** Net-monetary benefit from the surveillance system is on the order of 1,000 dollars per person over a one-year time-frame. This outweighs any available estimate of costs.
 * **Base-case results align with observed COVID-19 data.** US obseved on the order of 160 deaths per 100,000 people during the first year of the pandemic, and many states.
 -->
 
@@ -50,18 +50,18 @@ Points from this section for discussion:
 
 ### Epidemiological parameters
 
-A pathogen that is 50% more transmissible than wild-type SARS-Cov-2 would pose a greater challenge for pandemic response, causing `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 people even if mitigated with the same NPI policy considered in our base-case scenario (Supplementary Table 2). Such a pandemic would cause a substantial societal cost of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "C", NMB_comparator == T)` dollars per person. In those conditions, the EWS would be particularly valuable, reducing the death toll of the pandemic to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == F)` per 100,000 people, and would be projected to provide an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. Conversely, a pathogen that is 50% less transmissible than SARS-Cov-2 would result in a lower death toll of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` without the EWS system, reducing the net-monetary benefit of the system to `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. The value of the EWS system also depends on the infection fatality rate of the pathogen, but the net benefit of the EWS would be positive even for a pathogen that is half as deadly as SARS-Cov-2. All else equal, the EWS would still yield an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in a pandemic caused by a pathogen that is 50% less deadly than SARS-Cov-2, and would yield `r pull_estimate(r$table_1_long_all, Scenario == "1.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in responding to a pathogen that is 50% more deadly than COVID-19.
+A pathogen that is 50% more transmissible than wild-type SARS-Cov-2 would pose a greater challenge for pandemic response, causing `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 people even if mitigated with the same NPI policy considered in our base-case scenario (Supplementary Table 2). Such a pandemic would cause a substantial societal cost of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "C", NMB_comparator == T)` dollars per person. In those conditions, the ESS would be particularly valuable, reducing the death toll of the pandemic to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == F)` per 100,000 people, and would be projected to provide an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. Conversely, a pathogen that is 50% less transmissible than SARS-Cov-2 would result in a lower death toll of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` without the ESS system, reducing the net-monetary benefit of the system to `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. The value of the ESS system also depends on the infection fatality rate of the pathogen, but the net benefit of the ESS would be positive even for a pathogen that is half as deadly as SARS-Cov-2. All else equal, the ESS would still yield an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in a pandemic caused by a pathogen that is 50% less deadly than SARS-Cov-2, and would yield `r pull_estimate(r$table_1_long_all, Scenario == "1.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in responding to a pathogen that is 50% more deadly than COVID-19.
 
 ### NPI Costs
 
-NPI costs had a moderate effect on the value of surveillance systems. If NPI costs were 50% higher than assumed in our base-case scenario (i.e., if achieving the same NPI effectiveness were to cost 50% more than assumed under our base-case scenario), then the total cost of the pandemic would increase from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "C", NMB_comparator == T)` dollars per person with the conventional surveillance system. (Supplementary Figure 1, **Supplementary Table X**). Despite that increase, the NMB of the system would be only marginally reduced from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "NMB", NMB_comparator == F)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "NMB", NMB_comparator == F)` dollars per person, because the EWS system only marginally increased the number of days under interventions.
+NPI costs had a moderate effect on the value of surveillance systems. If NPI costs were 50% higher than assumed in our base-case scenario (i.e., if achieving the same NPI effectiveness were to cost 50% more than assumed under our base-case scenario), then the total cost of the pandemic would increase from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "C", NMB_comparator == T)` dollars per person with the conventional surveillance system. (Supplementary Figure 1, **Supplementary Table X**). Despite that increase, the NMB of the system would be only marginally reduced from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "NMB", NMB_comparator == F)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "NMB", NMB_comparator == F)` dollars per person, because the ESS system only marginally increased the number of days under interventions.
 
 ### Policy lags and stringency
 
-Longer decision and implementation lags have an overall negative effect on the total costs of the pandemic, longer decision lags also would *increase* the net benefit of EWS systems for pandemic response. Our base-case scenario assumes that decision-makers take one week to decide and implement non-pharmaceutical interventions. If policymakers took two weeks to introduce and implement interventions, the total pandemic cost increases from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == T)` dollars per person, assuming conventional surveillance. The early warning system effectively helps to roll-back decision lags, reducing total costs to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == F)` dollars per person, yielding an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "NMB", NMB_comparator == F)` relative to conventional surveillance. Conversely, in contexts where NPI implementation is swift (i.e, decisions are made within 3 days), the NMB of EWS would be lower but still positive at `r pull_estimate(r$table_1_long_all, Scenario == "3-day decision lag", variable == "NMB", NMB_comparator == F)` dollars per person.
+Longer decision and implementation lags have an overall negative effect on the total costs of the pandemic, longer decision lags also would *increase* the net benefit of ESS systems for pandemic response. Our base-case scenario assumes that decision-makers take one week to decide and implement non-pharmaceutical interventions. If policymakers took two weeks to introduce and implement interventions, the total pandemic cost increases from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == T)` dollars per person, assuming conventional surveillance. The early warning system effectively helps to roll-back decision lags, reducing total costs to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == F)` dollars per person, yielding an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "NMB", NMB_comparator == F)` relative to conventional surveillance. Conversely, in contexts where NPI implementation is swift (i.e, decisions are made within 3 days), the NMB of ESS would be lower but still positive at `r pull_estimate(r$table_1_long_all, Scenario == "3-day decision lag", variable == "NMB", NMB_comparator == F)` dollars per person.
 
-Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of EWS relative to decision lags - the EWS provides the most value under the least desirable conditions for disease prevention. In a context where decision-makers are 50% more stringent than in our base-case assumptions (i.e., their case thresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing mortality from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "deaths_per_100k", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 population without the EWS. In that scenario, the EWS yields `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "NMB", NMB_comparator == F)` dollars per person of net benefit since most of the deaths would already be prevented through more stringent NPIs. Conversely, if policymakers were more lenient policy choices would change the system overall outcomes but also imply a higher value of the enhanced surveillance system.
+Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of ESS relative to decision lags - the ESS provides the most value under the least desirable conditions for disease prevention. In a context where decision-makers are 50% more stringent than in our base-case assumptions (i.e., their case thresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing mortality from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "deaths_per_100k", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 population without the ESS. In that scenario, the ESS yields `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "NMB", NMB_comparator == F)` dollars per person of net benefit since most of the deaths would already be prevented through more stringent NPIs. Conversely, if policymakers were more lenient policy choices would change the system overall outcomes but also imply a higher value of the enhanced surveillance system.
 
 ### NPI effectiveness
 
-NPI effectiveness (i.e., the % reduction in infectious contacts caused by NPIs) had a non-monotonic effect on the value of surveillance systems to pandemic response (**Supplementary Figure X**). If NPI effectiveness is 0%, an improved surveillance system has no value, as expected. The value of the enhanced surveillance system increases with NPI effectiveness slowly for maximum NPI effectiveness below around 50%, and peaks when the maximum NPI effectiveness reaches 60%, enough to reduce the baseline R0 of 2.5 below 1 at the pandemic onset. In general, we find that the value of the EWS peaks at a maximum NPI effectiveness value at $1-1/R0$, for different values of R0. Beyond that point, increases in NPI effectiveness result in lower total pandemic costs, but the value of the surveillance system starts to decrease.
+NPI effectiveness (i.e., the % reduction in infectious contacts caused by NPIs) had a non-monotonic effect on the value of surveillance systems to pandemic response (**Supplementary Figure X**). If NPI effectiveness is 0%, an improved surveillance system has no value, as expected. The value of the enhanced surveillance system increases with NPI effectiveness slowly for maximum NPI effectiveness below around 50%, and peaks when the maximum NPI effectiveness reaches 60%, enough to reduce the baseline R0 of 2.5 below 1 at the pandemic onset. In general, we find that the value of the ESS peaks at a maximum NPI effectiveness value at $1-1/R0$, for different values of R0. Beyond that point, increases in NPI effectiveness result in lower total pandemic costs, but the value of the surveillance system starts to decrease.
